// Vitest Snapshot v1

exports[`CdrCheckbox > default configuration > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    <span
      class="cdr-label-wrapper__content"
    >
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > with a custom content class > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    <span
      class="cdr-label-wrapper__content custom-content-class"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > with a custom input class > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input custom-input-class"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    <span
      class="cdr-label-wrapper__content"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > with a custom label class > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium custom-label-class"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    <span
      class="cdr-label-wrapper__content"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > with an indeterminate prop > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      indeterminate="true"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    <span
      class="cdr-label-wrapper__content"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;
